Fix social nav on mobile

--- a/public/wp-content/themes/wild-and-without/css/components/social-links.scss
+++ b/public/wp-content/themes/wild-and-without/css/components/social-links.scss
@@ -13,16 +13,35 @@ body.header-fixed header .social_links_wrap {
   opacity: 0;
 }
 
+.social_link.facebook {
+  margin-right: 3px;
+}
+
 .social_link {
   display: inline-block;
-  vertical-align: top;
+  vertical-align: middle;
   width: 30px;
   height: 30px;
-  margin: 0 18px 0 0;
+  margin: 0 8px 0 0;
   text-align: center;
   line-height: 28px;
   font-size: 20px;
   color: #333;
+}
+
+.social_link:last-child {
+  margin-right: 0;
+}
+
+@media only screen and (min-width:480px) {
+  .social_link {
+    vertical-align: top;
+    margin: 0 16px 0 0;
+  }
+
+  .social_link.facebook {
+    margin-right: 16px;
+  }
 }
 
 .social_link i {
